--- a/idle_rpg/package.json
+++ b/idle_rpg/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -11,8 +11,10 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "sass": "^1.38.1",
+    "typescript": "^4.3.2",
     "vite": "^2.4.4"
   }
 }
