updated gitignore. updated readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+node_modules/
+dist/
 #tmux
 tmux*
 .vscode/
@@ -43,3 +45,74 @@ src/main
 ~$oject- Idle RPG! -Week_1.docx
 ~$$DomainModel.~vsdx
 ~$*
+idle_rpg/dist/index.html
+idle_rpg/dist/assets/armor-slot.c27a11b5.png
+idle_rpg/dist/assets/background-image-golden.36037de2.png
+idle_rpg/dist/assets/background-image-golden2.cf876e54.png
+idle_rpg/dist/assets/background-image-grey.f724b993.png
+idle_rpg/dist/assets/background-image.8f6c0fa5.png
+idle_rpg/dist/assets/border-image-golden.63f822a2.png
+idle_rpg/dist/assets/border-image-golden2.b0d14eb2.png
+idle_rpg/dist/assets/border-image-grey.452a3bcd.png
+idle_rpg/dist/assets/border-image.324d21a2.png
+idle_rpg/dist/assets/button-down.341e7090.png
+idle_rpg/dist/assets/button-golden-down.4a45a70c.png
+idle_rpg/dist/assets/button-golden-hover.d04dd89b.png
+idle_rpg/dist/assets/button-golden-left.2188bb94.png
+idle_rpg/dist/assets/button-golden-right.a69b234d.png
+idle_rpg/dist/assets/button-golden.9e6fe50c.png
+idle_rpg/dist/assets/button-hover.3a33b74a.png
+idle_rpg/dist/assets/button.0e605326.png
+idle_rpg/dist/assets/checkbox-golden-off.6311d93d.png
+idle_rpg/dist/assets/checkbox-golden-on.f1d0728f.png
+idle_rpg/dist/assets/checkbox-off.4053ed04.png
+idle_rpg/dist/assets/checkbox-on.a8169ac2.png
+idle_rpg/dist/assets/default.3a82f6d2.png
+idle_rpg/dist/assets/empty-slot.fe2ac22a.png
+idle_rpg/dist/assets/exclamation.6f340899.png
+idle_rpg/dist/assets/favicon.17e50649.svg
+idle_rpg/dist/assets/grab-close.86b873e9.png
+idle_rpg/dist/assets/grab-open.3b56b130.png
+idle_rpg/dist/assets/helmet-slot.4cd347bb.png
+idle_rpg/dist/assets/hr-golden.1bcecbfa.png
+idle_rpg/dist/assets/hr.4632ca84.png
+idle_rpg/dist/assets/index.02a8b4eb.js
+idle_rpg/dist/assets/index.4a815c6e.css
+idle_rpg/dist/assets/magic-slot.5cd05572.png
+idle_rpg/dist/assets/point.36504f71.png
+idle_rpg/dist/assets/potion-blue.4a8ab364.png
+idle_rpg/dist/assets/potion-green.4d57d017.png
+idle_rpg/dist/assets/potion-red.4aded262.png
+idle_rpg/dist/assets/potion-slot.fa8e8560.png
+idle_rpg/dist/assets/progress-bar-left.ed81be84.png
+idle_rpg/dist/assets/progress-bar-right.9c33f27e.png
+idle_rpg/dist/assets/progress-bar-track.5130ae0a.png
+idle_rpg/dist/assets/progress-blue.1337f649.png
+idle_rpg/dist/assets/progress-green.b6b73dd2.png
+idle_rpg/dist/assets/progress-red.f67cce2f.png
+idle_rpg/dist/assets/progress.23144fc8.png
+idle_rpg/dist/assets/radio-golden-off.7388cda8.png
+idle_rpg/dist/assets/radio-golden-on.ec6f2815.png
+idle_rpg/dist/assets/radio-off.cab1ec14.png
+idle_rpg/dist/assets/radio-on.11ffd512.png
+idle_rpg/dist/assets/ring-slot.93a38d5b.png
+idle_rpg/dist/assets/scrollbar-button.2b0d9781.png
+idle_rpg/dist/assets/scrollbar-thumb.f88d747b.png
+idle_rpg/dist/assets/scrollbar-track.bfa0dacf.png
+idle_rpg/dist/assets/select-background-image.dbd37d2b.png
+idle_rpg/dist/assets/select-border-image.9a4e764e.png
+idle_rpg/dist/assets/select.6c29b25b.png
+idle_rpg/dist/assets/shield-slot.8e6c088c.png
+idle_rpg/dist/assets/shield.546c4307.png
+idle_rpg/dist/assets/shoes-slot.6d099ce7.png
+idle_rpg/dist/assets/slider-left-golden.da0628c4.png
+idle_rpg/dist/assets/slider-left.fa30fad0.png
+idle_rpg/dist/assets/slider-right-golden.05985d8c.png
+idle_rpg/dist/assets/slider-right.4cd8f79b.png
+idle_rpg/dist/assets/slider-thumb-golden.2398f785.png
+idle_rpg/dist/assets/slider-thumb.b4f52098.png
+idle_rpg/dist/assets/slider-track-golden.d18e517a.png
+idle_rpg/dist/assets/slider-track.67e61f7c.png
+idle_rpg/dist/assets/sword.1730fe67.png
+idle_rpg/dist/assets/vendor.de4e1228.js
+idle_rpg/dist/assets/weapon-slot.554ea7fe.png
